# music_game

./: .gitignore  CMakeLists.txt  README.md  wrun.bat
include/: mic_reader.hpp  platform.hpp  types.hpp
libs/: imgui.cmake
src/: CMakeLists.txt  main.cpp  mic_reader.cpp  platform.cpp  platform.hpp  platform_windows.cpp  types.hpp
src/platform/: platform_windows.cpp
